# everything-cli

./: .gitignore  LICENSE  README.md  SPEC.md  ci.py  pyproject.toml
.agents/skills/everyfile/: SKILL.md
.agents/skills/everyfile/references/everything-sdk/: c.md  csharp.md  ipc.md  python.md  visual_basic.md
.agents/skills/everyfile/references/everything-sdk/api/: everything_deleterunhistory.md  everything_exit.md  everything_getbuildnumber.md  everything_getlasterror.md  everything_getmajorversion.md  everything_getmatchpath.md  everything_getmatchwholeword.md  everything_getnumfileresults.md  everything_getnumresults.md  everything_getoffset.md  everything_getrequestflags.md  everything_getresultextension.md  everything_getresulthighlightedfilename.md  everything_getresulthighlightedpath.md  everything_getresultlistsort.md  everything_getresultpath.md  everything_getresultruncount.md  everything_getresultsize.md  everything_getrevision.md  everything_getsearch.md  everything_getsort.md  everything_gettotresults.md  everything_isappdata.md  everything_isfileresult.md  everything_isqueryreply.md  everything_rebuilddb.md  everything_savedb.md  everything_setmatchpath.md  everything_setmatchwholeword.md  everything_setmax.md  everything_setoffset.md  everything_setreplywindow.md  everything_setrequestflags.md  everything_setsort.md
.agents/skills/everything-cli/: SKILL.md  api.md  cli.md  mcp.md
.agents/skills/everything-cli/everything-sdk/: clarion.md
.agents/skills/everything-cli/everything-sdk/api/: everything_getmatchcase.md  everything_getmax.md  everything_getregex.md  everything_getreplyid.md  everything_getresultdateaccessed.md  everything_getresultdatecreated.md  everything_getresultdaterecentlychanged.md  everything_getresultdaterun.md  everything_getresultfilename.md  everything_getresultlistrequestflags.md  everything_gettargetmachine.md  everything_gettotfolderresults.md  everything_incruncountfromfilename.md  everything_isadmin.md  everything_isdbloaded.md  everything_isvolumeresult.md  everything_saverunhistory.md  everything_setreplyid.md  everything_setruncountfromfilename.md  everything_sortresultsbypath.md  everything_updateallfolderindexes.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-skill.yml  publish.yml
docs/: MCP_SPEC.md  PYTHON_API_SPEC.md
docs/everything-sdk/: index.md
docs/everything-sdk/api/: everything_cleanup.md  everything_getminorversion.md  everything_getnumfolderresults.md  everything_getreplywindow.md  everything_getresultattributes.md  everything_getresultdatemodified.md  everything_getresultfilelistfilename.md  everything_getresultfullpathname.md  everything_getresulthighlightedfullpathandfilename.md  everything_getruncountfromfilename.md  everything_gettotfileresults.md  everything_isfolderresult.md  everything_query.md  everything_reset.md  everything_setmatchcase.md  everything_setregex.md  everything_setsearch.md
src/everyfile/: __init__.py  __main__.py  api.py  mcp.py  pick.py  querymatch.py  row.py  search.py
src/everyfile/output/: human.py  ndjson.py
src/everyfile/sdk/: ipc.py
src/everyfile/util/: attrs.py
src/everything_cli/: __init__.py  __main__.py  filter.py  mcp.py  querymatch.py  search.py
src/everything_cli/output/: color.py  human.py  ndjson.py
src/everything_cli/sdk/: api.py  constants.py  ipc.py  types.py
src/everything_cli/util/: glob.py
src/everything_mcp/: __init__.py  __main__.py  cursor.py  filter.py  mcp.py
src/everything_mcp/output/: human.py
src/everything_mcp/util/: dates.py
tests/: test_api.py  test_cursor.py  test_row.py
